Modify LICENSE.